maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:34: error: ';' expected but 'else' found.
    } else {
      ^IslandMaze:50: error: Unmatched closing brace '}' ignored here
}
^